# temporal_networks

./: .gitignore  .mailmap  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_CHECKLIST.md  CONTRIBUTING.md  MANIFEST.in  README.md  benchmark.py  benchmark_vcount.py  paper.bib  paper.md  pyproject.toml  requirements.txt  ruff.toml  setup.py  setup.py 
.github/workflows/: tests.yml
benchmarks/: benchmark.py  benchmark_centralities.py  benchmark_centrality.py
docs/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst
examples/: example_1_synthetic.py  example_full_integration.py  example_multigap_report.py  example_specs_01_02_03.py
paper/: paper.dvi  paper.fdb_latexmk  paper.fls  paper.tex  plain20.bst
temporal_networks/: __init__.py  __init__.py    _community_utils.py  _gap_utilities.py  burstiness.py  calculate_centralities.py  change_points.py  communities_measures.py  community_tracking.py  edge_formation_dissolution.py  io.py  network_properties.py  plot_community_evolution.py  stability.py  temporal_gap_analysis.py  temporal_paths.py  vertex_properties.py
tests/: benchmark.py  benchmark_approaches.py  run_tests.py  test_data_generator.py  test_gap_utilities.py
tests/unit/: test_burstiness.py  test_calculate_centralities.py  test_calculate_time_difference.py  test_change_points.py  test_communities_measures.py  test_community_tracking.py  test_edge_formation_dissolution.py  test_gap_utilities.py  test_io.py  test_network_properties.py  test_plot_community_evolution.py  test_stability.py  test_temporal_gap_analysis.py  test_temporal_paths.py  test_vertex_properties.py
