[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal_networks"
version = "0.1.0"
description = "Python package for analyzing dynamic networks over time with automatic gap detection"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Adriana-Stefania Ciupeanu", email = "cadrianas@gmail.com" },
    { name = "Julien Arino", email = "Julien.Arino@umanitoba.ca" },
]
requires-python = ">=3.9"
keywords = ["temporal networks", "network analysis", "graph theory", "time series", "igraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "igraph>=0.11.5",
    "matplotlib>=3.8.4",
    "plotly>=5.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
]

[project.urls]
Homepage = "https://github.com/cadrianas/temporal_networks"
Documentation = "https://temporal-networks.readthedocs.io"
Repository = "https://github.com/cadrianas/temporal_networks"
"Bug Tracker" = "https://github.com/cadrianas/temporal_networks/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "benchmarks*", "examples*"]

[tool.setuptools.package-data]
temporal_networks = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-v"

[tool.ruff]
line-length = 88
exclude = ["tests/"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
files = ["temporal_networks"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["temporal_networks"]
omit = ["tests/*", "examples/*", "benchmarks/*"]
